@@ -2,5 +2,5 @@ buildScan {
     termsOfServiceUrl = 'https://gradle.com/terms-of-service'
     termsOfServiceAgree = 'yes'
 
-    publishAlways()
+    //publishAlways()
 }
