@@ -1,12 +1,0 @@
-package org.aim42.htmlsanitycheck;
-
-/**
-* gradle 2.1 has a nasty javadoc bug.
-
-(gradle issue #3169), remove this class when this issue is fixed.
-**/
-
-public class GradleBugWorkaround {
-	int i;
-
-}
